Disabling some unneeded code.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="container home">
 
     <section class="intro">
-      <img src="img/main-header.png">
+      <!-- <img src="img/main-header.png"> -->
 
       <h2>Welcome</h2>
       
@@ -41,11 +41,11 @@
       </p>
     </section>
 
-    <section class="intro-images">
+    <!-- <section class="intro-images">
         <img src="img/1.png" class="intro1" alt="">
         <img src="img/2.png" class="intro2" alt="">
         <img src="img/3.png" class="intro3" alt="">
-    </section>
+    </section> -->
    
     <section class="visit-places">
       <h3>Features &amp; Benefits</h3>
@@ -72,9 +72,9 @@
         </div>
       </div>
       
-      <div class="walk-img">
+      <!-- <div class="walk-img">
         <img src="img/walk.png" alt="">
-      </div>
+      </div> -->
     </section>
 
   </div>
