Change page title.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>COrporate Planner for Events - helping you COPE</title>
+  <title>COPE: COrporate Planner for Events</title>
 
   <link href="https://fonts.googleapis.com/css?family=Nunito%7COpen+Sans%7CRoboto%7CMontserrat&display=swap" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
