Upgrade from Bootstrap 3.4.0 to 4.3.1.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito%7COpen+Sans%7CRoboto%7CMontserrat&display=swap">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
   <script src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" data-auto-replace-svg="nest"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -33,7 +33,6 @@
   </header>
 
   <div class="container home">
-
     <section class="intro">
       <!-- <img src="img/main-header.png"> -->
 
@@ -69,42 +68,35 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
-          <div class="item active">
+          <div class="carousel-item active">
             <img src="img/samples/01.jpg" alt="Sample 01" style="width:100%;">
           </div>
-          <div class="item">
+          <div class="carousel-item">
             <img src="img/samples/02.jpg" alt="Sample 02" style="width:100%;">
           </div>
-          <div class="item">
+          <div class="carousel-item">
             <img src="img/samples/03.jpg" alt="Sample 03" style="width:100%;">
           </div>
-          <div class="item">
+          <div class="carousel-item">
             <img src="img/samples/04.jpg" alt="Sample 04" style="width:100%;">
           </div>
-          <div class="item">
+          <div class="carousel-item">
             <img src="img/samples/05.jpg" alt="Sample 05" style="width:100%;">
           </div>
-          <div class="item">
+          <div class="carousel-item">
             <img src="img/samples/06.jpg" alt="Sample 06" style="width:100%;">
           </div>
         </div>
-
+      
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
+        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
+        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
         </a>
       </div>
     </section>
-    
   </div>
-
-  <!-- <footer>
-    <p>&copy; COPE 2019</p>
-  </footer> -->
 </body>
 </html>
