--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <title>COPE: COrporate Planner for Events</title>
 
-  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito%7COpen+Sans%7CRoboto%7CMontserrat&display=swap">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <script src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" data-auto-replace-svg="nest"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -32,7 +32,7 @@
     </nav>
   </header>
 
-  <div class="container home">
+  <div class="main-container home">
     <section class="intro">
       <!-- <img src="img/main-header.png"> -->
 
@@ -53,7 +53,7 @@
       </ul>
     </section>
     
-    <section class="container">
+    <section class="main-container">
       <h2>Samples of our Results</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
