Add favicons & change Nav to align w/MVP reqs.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
   <title>COPE: COrporate Planner for Events</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="./img/favicon/site.webmanifest">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito%7COpen+Sans%7CRoboto%7CMontserrat&display=swap">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/index.css">
@@ -25,8 +30,8 @@
         </a>
       </div>
       <div>
-        <a class="Organization" href="#">Organization&nbsp;<i class="fas fa-users"></i></a>
-        <a class="User" href="#">User&nbsp;<i class="fas fa-user-tie"></i></a>
+        <a></a>
+        <a class="About" href="about.html">About&nbsp;Us&nbsp;<i class="fas fa-users"></i></a>
         <a class="SignIn" href="#">Sign&nbsp;In&nbsp;<i class="fas fa-sign-in-alt"></i></a>
       </div>
     </nav>
