More style changes, add About page.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li>Create & Share Event Summaries</li>
           <li>Communicate with Vendors</li>
           <li>Collaborate with Team</li>
+          <li>Reduce Expenses</li>
         </ul>
       </section>
     </div>
