Improve About page tech cloud & adjust styling.

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         initial : [-0.360, -0.360],
         reverse : true,
         dragControl : false,
-        imageMode : both,
+        imageMode : "both",
         imagePosition : top,
         imagePadding : 2,
         depth : 0.75,
@@ -92,25 +92,26 @@
         </section>
       
         <section class="skills intro-item">
-          <h3 class="skills-technology">Skills & Technology</h3>
+          <h3 class="skills-technology">Skills & Technologies</h3>
 
           <div id="myCanvasContainer">
             <canvas width="300" height="300" id="myCanvas" style="width: 100%;">
               <p>Your browser does not support the canvas element. Please upgrade to view this content.</p>
               <ul>
-                <!-- <li><a href="https://git-scm.com" target="_blank"><img src="./img/git.png" width="50px" height="50px">Git</a></li> -->
-                <li><a href="https://git-scm.com" target="_blank">Git</a></li>
-                <li><a href="#">HTML5</a></li>
-                <li><a href="#">CSS3</a></li>
-                <li><a href="#">Responsive Design</a></li>
-                <li><a href="#">UI/UX</a></li>
-                <li><a href="#"></a>React</li>
-                <li><a href="#"></a>Bootstrap</li>
-                <li><a href="#"></a>jQuery</li>
-                <li><a href="#"></a>JavaScript</li>
-                <li><a href="#"></a>Google Fonts</li>
-                <li><a href="#"></a>FontAwesome</li>
-                <li><a href="#"></a>Favicon.io</li>
+                <li><a href="https://git-scm.com" target="_blank"><img src="./img/icons/git.png" width="50px" height="50px">Git</a></li>
+                <li><a href="https://github.com" target="_blank"><img src="./img/icons/octocat.png" width="50px" height="50px">GitHub</a></li>
+                <li><a href="https://netlify.com" target="_blank"><img src="./img/icons/netlify.png" width="50px" height="50px">Netlify</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5/Introduction_to_HTML5"><img src="./img/icons/html5.png" width="50px" height="50px">HTML5</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps"><img src="./img/icons/css3.png" width="50px" height="50px">CSS3</a></li>
+                <li><a href="https://responsivedesign.is"><img src="./img/icons/responsive.png" width="50px" height="50px">Responsive Design</a></li>
+                <li><a href="https://uxplanet.org"><img src="./img/icons/uxui.png" width="50px" height="50px">UX/UI</a></li>
+                <li><a href="https://reactjs.org"><img src="./img/icons/react.png" width="50px" height="50px">React</a></li>
+                <li><a href="https://getbootstrap.com"><img src="./img/icons/boostrap.png" width="50px" height="50px">Bootstrap</a></li>
+                <li><a href="https://jquery.com"><img src="./img/icons/jquery.png" width="50px" height="50px">jQuery</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction"><img src="./img/icons/javascript.png" width="50px" height="50px">JavaScript</a></li>
+                <li><a href="https://fonts.google.com"><img src="./img/icons/googlefonts.png" width="50px" height="50px">Google Fonts</a></li>
+                <li><a href="https://fontawesome.com"><img src="./img/icons/fontawesome.png" width="50px" height="50px">FontAwesome</a></li>
+                <li><a href="https://favicon.io"><img src="./img/icons/favicon.ico" width="50px" height="50px"></i>Favicon.io</a></li>
               </ul>
             </canvas>
           </div>
