Link Sign In to React site.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div>
         <a class="About" href="about.html">About&nbsp;Us&nbsp;<i class="fas fa-users"></i></a>
-        <a class="SignIn" href="#">Sign&nbsp;In&nbsp;<i class="fas fa-sign-in-alt"></i></a>
+        <a class="SignIn" href="https://event-planner-20193-fe.netlify.com">Sign&nbsp;In&nbsp;<i class="fas fa-sign-in-alt"></i></a>
       </div>
     </nav>
   </header>
